recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:6: error: not found: value n
    spiral(n-1,angle,length+3,increment);
           ^