recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(steps == 0){
    avance(length);
    gauche(angle);
  }else{
    spiral(n-1,angle,length+3,increment);
    avance(length);
    gauche(angle);
  }
}